Game Settings Update
Add more restrictions and conditions for accepting values.

--- a/MasterMind/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind/MasterMind.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameCore\GameCommands.cs" />
+    <Compile Include="GameCore\GameManager.cs" />
     <Compile Include="GameCore\GameSettings.cs" />
-    <Compile Include="Interface\IExecutable.cs" />
+    <Compile Include="GameCore\InputValidator.cs" />
+    <Compile Include="Interface\IWritable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
